- Apply some emergency fixes for windows where select options all nearly illegible
Fixes #50

--- a/ec4-v2-vue/src/assets/main.scss
+++ b/ec4-v2-vue/src/assets/main.scss
@@ -49,3 +49,16 @@ html {
   box-shadow: 0 0 1.5rem rgba($white, 0.1);
 }
 
+select {
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+  color: $textColor;
+
+  option {
+    background-color: black;
+    font: inherit;
+    color: inherit;
+  }
+}
+
